--- a/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
+++ b/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
@@ -124,6 +124,12 @@
                 </div>
                 <ul class="topNav">
                     <li>
+                        {{cartSummary ? cartSummary.NoOfProducts : ''}}
+                        <button title="Orders in cart" @click="navigateToCart">                            
+                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        </button>
+                    </li>
+                    <li>
                         <button title="Support" @click="navigateToHome">
                             <i class="fas fa-home"></i>
                         </button>
