--- a/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
 
     <div class="panel-heading">
-        <h4 class="pull-left">Services</h4>
+        <h4 class="pull-left">Assign Services</h4>
         <div class="btn-group btnGroupScrollWrap tagBtnGrp">
             <!-- <div class="btn-group " id="tagScrollSection">
                 <label>Property:</label>
