--- a/WebClient/src/components/myaccount/orderItemComponent/orderItemComponent.template.html
+++ b/WebClient/src/components/myaccount/orderItemComponent/orderItemComponent.template.html
@@ -15,6 +15,9 @@
         <div class="form-group">
             ₹ {{orderDetails.ServiceType == 1 ? orderDetails.SubscriptionPrice : orderDetails.Price}}
         </div>
+        <div class="form-group" v-if="orderDetails.Quantity">
+            Quantity: {{orderDetails.Quantity}}
+        </div>
         <div class="form-group">
             <span> {{orderDetails.VehicleName}}</span>
             <span style="color: #004dff; margin-left: 30px;">{{orderDetails.SubscribeType}}</span>
