--- a/WebClient/src/components/adminModule/serviceDetailComponent/serviceDetailComponent.template.html
+++ b/WebClient/src/components/adminModule/serviceDetailComponent/serviceDetailComponent.template.html
@@ -27,7 +27,7 @@
                     <label>
                         Service Name
                     </label>
-                    <input type="text" v-model="serviceDetail.ServiceName" class="form-control" placeholder="Name" name="ServiceName"  v-validate="'required|alpha_num'">
+                    <input type="text" v-model="serviceDetail.ServiceName" class="form-control" placeholder="Name" name="ServiceName"  v-validate="'required'">
                     <span v-show="errors.has('ServiceName')" class="invalid-feedback">
                         <i v-show="errors.has('ServiceName')" class="fa fa-warning"></i> 
                         Please enter Service Name
